alienbnb some errors corrected, but not responsive yet

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -4,20 +4,20 @@
 :root {
   box-sizing: border-box;
   font-size: 62.5%;
+  --font-family: "Montserrat", sans-serif;
   --primary: rgb(102, 204, 138);
   --primary-focus: rgb(61, 184, 104);
   --primary-content: rgb(40, 71, 56);
   --secondary: rgb(55, 124, 251);
   --secondary-focus: rgb(5, 87, 240);
   --accent: rgb(234, 82, 52);
-  --base-100: rgb(251, 251, 251);
+  --base-100: rgb(253, 253, 253);
   --base-150: rgb(247, 247, 247);
   --base-200: rgb(230, 230, 230);
   --base-300: rgb(207, 207, 207);
   --base-400: rgb(184, 185, 190);
-  --base-drop-shadow: rgba(46, 55, 74, 0.1);
   --base-content: rgb(66, 68, 88);
-  --font-family: "Montserrat", sans-serif;
+  --base-drop-shadow: rgba(46, 55, 74, 0.1);
 }
 
 *,
@@ -62,5 +62,4 @@ input {
   background-color: var(--base-150);
   padding: 1.4rem;
   width: 100%;
-  border-radius: 25rem;
 }
