--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,5 +1,4 @@
 .header {
-  color: var(--primary-content);
   background: rgb(102, 204, 138);
   background: linear-gradient(138deg, var(--primary) 0%, var(--secondary) 100%);
   position: relative;
