--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -63,6 +63,18 @@
     }
   }
 
+  .input-search {
+    border-radius: 25rem;
+    margin-left: 5.4rem;
+    box-shadow: 0px 0px 8px 4px var(--base-drop-shadow);
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+    &:focus,
+    &:hover {
+      outline: 3px solid var(--primary);
+    }
+  }
+
   .fa-solid {
     font-size: 2.2rem;
     font-weight: 600;
@@ -72,16 +84,5 @@
     margin-left: auto;
     display: block;
     min-width: 12.2rem;
-  }
-}
-
-.input-search {
-  margin-left: 8.4rem;
-  box-shadow: 0px 0px 8px 4px var(--base-drop-shadow);
-  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
-  &:focus,
-  &:hover {
-    outline: 3px solid var(--primary);
   }
 }
